### CHANGED: Pain now uses setCameraShakeLevel(150) & Added config gameplayVariables["painshakelevel"]
### CHANGED: New animation binds (1 = Salute, 2 = Hands up, 3 = Sit, 5 = Journal)
### CHANGED: playerThirst and playerHunger calculation every 30 seconds instead of onClientRender
### CHANGED: The night is far less dark
### CHANGED: The timer "night_check" is now set to 4 seconds.
### DEPRECATED: For once-stable removed in upcoming releases
### REMOVED: For deprecated features removed in the release it's mentioned in
### FIXED: For all bugs
### FIXED: FPS Drop on some PC.
### FIXED: Anti-teleport detection
### FIXED: Fixed Polish Language Typo
### FIXED: Ammo bug
### FIXED: Patrol Pack bug
### FIXED: Black & White shader not loading
### FIXED : The player don't get damage if are submerged for along time
### SECURITY: To invite users to upgrade in case of vulnerabilities
### LANGUAGE: Romanian is now available.

# - #
## [0.9.5a] - 2015-08-19
### ADDED: New status effects: Sepsis, Infection & Unconsciousness
### ADDED: New Items: Range Finder, Epi-Pen
### ADDED: Crosshair integration
### ADDED: Difficulty options (Normal, Veteran & Hardcore)
### ADDED: Viral zombie (24000 blood, greenish skin)
### ADDED: Empty Gas Canister to industrial loot table
### ADDED: Tent to supermarket loot table
### ADDED: Range Finder to military loot table
### ADDED: Salute animation (key: , [COMMA])
### ADDED: Can give Morphine, Antibiotics and Epi-Pens to other players
### CHANGED: Completely new inventory UI (rightclick to use/equip items)
### CHANGED: Holding weapons will free up 10 slots, while carrying them takes 10
### CHANGED: Humanity Calculation
### CHANGED: Wood Piles from chopping trees are dropped on the ground
### CHANGED: Weapon damage tweaks
### CHANGED: Weapon magazine sizes tweaks
### CHANGED: Burst Fire for FN FAL
### CHANGED: DMR + Bizon PP-19 are now silent
### CHANGED: Decreased chance for wire fence to spawn
### CHANGED: Increased Bi-2 Airplane spawn chance to 35%