@@ -277,10 +277,7 @@ function playerActivateGoggles (key,keyState)
 				guiSetVisible(infravision,false)
 				showChat(true)
 				setCameraGoggleEffect("normal")
-				local hour, minutes = getTime()
-				if gameplayVariables["enablenight"] then
-					setClientNight (hour,minutes)
-				end
+				triggerEvent("onPlayerDisabledGoggles", getLocalPlayer())
 			else 
 				nightvision = true
 				guiSetVisible(nightvisionimage,true)
@@ -288,6 +285,7 @@ function playerActivateGoggles (key,keyState)
 				showChat(false)
 				setCameraGoggleEffect("nightvision")
 				setFarClipDistance(1000)
+				triggerEvent("onPlayerEnabledGoggles", getLocalPlayer())
 			end
 		end
 	elseif key == "i" then
@@ -298,48 +296,20 @@ function playerActivateGoggles (key,keyState)
 				guiSetVisible(nightvisionimage,false)
 				showChat(true)
 				setCameraGoggleEffect("normal")
-				if gameplayVariables["enablenight"] then
-					setClientNight (hour,minutes)
-				end
+				triggerEvent("onPlayerDisabledGoggles", getLocalPlayer())
 			else 
-				 infaredvision = true
-				 guiSetVisible(infravision,true)
-				 guiSetVisible(nightvisionimage,false)
-				 showChat(false)
+				infaredvision = true
+				guiSetVisible(infravision,true)
+				guiSetVisible(nightvisionimage,false)
+				showChat(false)
 				setCameraGoggleEffect("thermalvision")
-				if gameplayVariables["enablenight"] then
-					setClientNight (hour,minutes)
-				end
+				triggerEvent("onPlayerEnabledGoggles", getLocalPlayer())
 			end
 		end
 	end
 end
 bindKey("n","down",playerActivateGoggles)
 bindKey("i","up",playerActivateGoggles)
-
-function setClientNight (hour,minutes)
-	if hour == 21 then
-		setSkyGradient(0, 100/minutes, 196/minutes, 136/minutes, 170/minutes, 212/minutes)
-		setFarClipDistance(120+(880-minutes*14.6))
-		setFogDistance(-150+(250-minutes*4.16))
-	elseif hour == 7 then
-		setSkyGradient( 0, 1.6*minutes, 196*3.26, 136*2.26, 170*2.83, 212*3.53 )
-		setFarClipDistance(120+(minutes*14.6))
-		setFogDistance(-150+(minutes*4.16))
-	elseif hour == 22 or hour == 23 then
-		setSkyGradient( 0, 0, 0, 0, 0, 0 )
-		setFarClipDistance(120)
-		setFogDistance(-150)
-	elseif hour >= 0 and hour <= 7 then
-		setSkyGradient( 0, 0, 0, 0, 0, 0 )
-		setFarClipDistance(120)
-		setFogDistance(-150)
-	else
-		setSkyGradient(0, 100, 196, 136, 170, 212)
-		setFarClipDistance(1000)
-		setFogDistance(100)
-	end
-end
 
 local sWidth,sHeight = guiGetScreenSize()
 function WeaponHUD()
