@@ -18,6 +18,21 @@ local shaderList = {}
 local fading = false
 local clone
 
+nightStatus = true
+
+function onPlayerEnabledGoggles()
+	nightStatus = false
+end
+addEvent("onPlayerEnabledGoggles",true)
+addEventHandler("onPlayerEnabledGoggles",root,onPlayerEnabledGoggles)
+
+
+function onPlayerDisabledGoggles()
+	nightStatus = true
+end
+addEvent("onPlayerDisabledGoggles",true)
+addEventHandler("onPlayerDisabledGoggles",root,onPlayerDisabledGoggles)
+
 -- Feel free to add more removables.
 local removables = {
 	'tx*',
@@ -61,21 +76,23 @@ function night_init()
 	end
 
 	addEventHandler('onClientHUDRender', root, night_render)
-	nightTimer = setTimer(night_check, 4000, 0)
+	nightTimer = setTimer(night_check, 1000, 0)
 end
 
 function night_check()
-	local hours, minutes = getTime()
-	if hours >= 5 and hours < 12 then
-		fading = false
-	elseif hours >= 12 and hours < 15 then
-		fading = false
-	elseif hours >= 15 and hours < 21 then
-		fading = false
-	elseif hours >= 21 and hours < 5 then
-		fading = false
-	else
-		fading = true
+	if nightStatus == true then
+		local hours, minutes = getTime()
+		if hours >= 5 and hours < 12 then
+			fading = false
+		elseif hours >= 12 and hours < 15 then
+			fading = false
+		elseif hours >= 15 and hours < 21 then
+			fading = false
+		elseif hours >= 21 and hours < 5 then
+			fading = false
+		else
+			fading = true
+		end
 	end
 end
 
